--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Rinkikumari19.github.io/Picture-Quiz-Game",
   "name": "picture-quiz",
   "version": "0.1.0",
   "private": true,
@@ -12,13 +13,18 @@
     "express": "^4.17.1",
     "install": "^0.13.0",
     "mongoose": "^6.0.12",
+    "nvm": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "main": "app.js"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+   
+    "start": "node app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "nodemon": "^2.0.14"
   }
 }
